tests/negative/gold/primitive2_test.gold
tests/negative/primitive2_test.toit:4:10: error: Unresolved identifier: 'name'
 {{ some name }}
         ^~~~
tests/negative/primitive2_test.toit:4:5: error: Unresolved identifier: 'some'
 {{ some name }}
    ^~~~
Compilation failed.
